# dearimgui-starter-project

./: CMakeLists.txt  Makefile  README.md
libs/glfw/src/: Makefile  cmake_install.cmake
src/: main.cpp
